@@ -74,6 +74,7 @@ ahc_echo (void *cls,
     {
       stat (&url[1], &buf);
       response = MHD_create_response_from_callback (buf.st_size,
+						    32 * 1024, /* 32k page size */				    
                                                     &file_reader,
                                                     file,
                                                     (MHD_ContentReaderFreeCallback)
